--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TTN | Totally Not Twitter</title>
+    <title>TNT | Totally Not Twitter</title>
   </head>
   <body>
     <div id="root"></div>
